<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/carkeeper_main_color"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <com.wteam.carkeeper.custom.TopBar
        android:id="@+id/order_management_top_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        custom:top_bar_tv_1_text="@string/back"
        custom:top_bar_tv_1_textColor="@color/carkeeper_text_color"
        custom:top_bar_tv_1_textSize="24.0"
        custom:top_bar_tv_title_text="@string/order_management_main_title"
        custom:top_bar_tv_title_textSize="16"
        custom:top_bar_tv_title_textColor="@color/carkeeper_text_color"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/order_management_tab_layout"
        custom:tabTextColor="@color/carkeeper_text_uncheck_color"
        custom:tabSelectedTextColor="@color/carkeeper_text_color"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <android.support.design.widget.TabItem
            android:text="@string/order_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TabItem
            android:text="@string/order_un_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TabItem
            android:text="@string/order_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TabLayout>

    <com.wteam.carkeeper.custom.PinnedSectionListView
        android:id="@android:id/list"
        android:background="@color/item_title_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </com.wteam.carkeeper.custom.PinnedSectionListView>
</LinearLayout>
