<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_recover_password"
    android:fitsSystemWindows="true"
    android:background="@color/carkeeper_main_color"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wteam.carkeeper.custom.TopBar
        android:id="@+id/recover_password_top_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="20"
        android:background="@color/carkeeper_main_color"
        custom:top_bar_tv_1_text="@string/back"
        custom:top_bar_tv_1_textColor="@color/carkeeper_text_color"
        custom:top_bar_tv_1_textSize="24.0"
        custom:top_bar_tv_title_text="@string/recover_password"
        custom:top_bar_tv_title_textColor="@color/carkeeper_text_color"
        custom:top_bar_tv_title_textSize="16.0" />

    <LinearLayout
        android:id="@+id/input_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="105"
        android:background="@drawable/bg_round">
        <AutoCompleteTextView
            android:id="@+id/recover_password_telephone_num"
            android:layout_marginTop="24dp"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/text_hint"
            android:paddingLeft="@dimen/textView_padding"
            android:paddingRight="@dimen/textView_padding"
            android:drawableLeft="@drawable/login_with_tele_mobile_selector"
            android:drawablePadding="12dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/telephone_num"
            android:singleLine="true" />

        <AutoCompleteTextView
            android:id="@+id/recover_password_password"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/text_hint"
            android:layout_marginTop="8dp"
            android:drawablePadding="12dp"
            android:paddingLeft="@dimen/textView_padding"
            android:paddingRight="@dimen/textView_padding"
            android:drawableLeft="@drawable/login_psw_selector"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:singleLine="true" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp">
            <AutoCompleteTextView
                android:id="@+id/recover_password_check_code"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/text_hint"
                android:drawablePadding="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="96dp"
                android:drawableLeft="@drawable/login_psw_selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/check_code"
                android:singleLine="true" />
            <TextView
                android:id="@+id/recover_password_get_check_code"
                android:background="@drawable/get_code_light"
                android:layout_gravity="right"
                android:gravity="center"
                android:textColor="@color/carkeeper_main_color"
                android:textSize="@dimen/font_size_11"
                android:layout_marginRight="8dp"
                android:layout_width="80dp"
                android:layout_height="32dp" />
        </FrameLayout>

        <com.andexert.library.RippleView
            android:id="@+id/rv_recover_password_commit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            custom:rv_zoom="true"
            custom:rv_color="#000000"
            custom:rv_centered="false">
            <Button
                android:background="@color/carkeeper_main_color"
                android:text="@string/commit"
                android:textColor="@color/carkeeper_text_color"
                android:textSize="@dimen/font_size_16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.andexert.library.RippleView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="98">
        <ImageView
            android:src="@drawable/carkeeper"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </RelativeLayout>

</LinearLayout>
